--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -31,7 +31,7 @@
 				font-weight: 300;
 				color: white;
 				opacity: 0.85;
-				text-shadow: 2px 2px 3px $text-shadow;
+				text-shadow: 2px 2px 3px $green4;
 			}
 			h1 {
 				font-size: 5vw;
@@ -76,7 +76,7 @@
 			background-size: 150%;
 			a {
 				font-size: 3vw;
-				color: $footer-color;
+				color: $green5;
 				text-shadow: 0 0 5px $green2;
 				text-decoration: none;
 				font-family: $title-font;
