--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -6,7 +6,7 @@ nav {
 	align-items: center;
 	height: 10vh;
 	background-color: $background-color;
-	border-bottom: 1px solid $footer-color;
+	border-bottom: 1px solid $green5;
 	.logo {
 		display: flex;
 		align-items: center;
