--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -20,7 +20,7 @@
 			font-weight: 300;
 			color: white;
 			opacity: 0.85;
-			text-shadow: 2px 2px 3px $text-shadow;
+			text-shadow: 2px 2px 3px $green4;
 			text-align: center;
 			font-size: 3.5vw;
 		}
@@ -47,7 +47,7 @@
 			margin-bottom: 5vh;
 			margin-right: 0;
 			font-size: 20px;
-			background-color: $container-color;
+			background-color: $green1;
 			border-radius: 10px;
 			p {
 				padding: 20px;
