--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,34 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap');
 
-// $background-color: white;
-// $container-color: hsl(200, 40%, 75%);
-// $container-shadow: hsl(200, 40%, 75%);
-// $text-shadow: hsl(180, 100%, 20%);
-// $title-container-color: #d7fbe88e;
-// $footer-color: #13614d;
-
-// $text-font: 'Alegreya', serif;
-// $title-font: 'Montserrat', sans-serif;
-
-// Old colors
-
 $background-color: #ecfaf3;
-$container-color: #d7fbe8;
-$container-shadow: #9df3c4;
-$text-shadow: #1fab89;
-$title-container-color: #d7fbe88e;
-$footer-color: #13614d;
-
-$text-font: 'Alegreya', serif;
-$title-font: 'Montserrat', sans-serif;
-
 $green1: #d7fbe8;
 $green2: #9df3c4;
 $green3: #62d2a2;
 $green4: #1fab89;
+$green5: #13614d;
 
 $gold1: #fde6a0;
 $gold2: hsl(71, 78%, 78%);
 $gold3: #ffbf00;
 $gold4: #bf9b30;
+
+$text-font: 'Alegreya', serif;
+$title-font: 'Montserrat', sans-serif;
