--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -35,7 +35,9 @@
 			width: 100%;
 			height: 100%;
 			grid-area: 1 / 1 / span 5 / span 4;
-			background-color: $green2;
+			background: url('../images/doggo-background-texture.png');
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 		.review {
 			display: flex;
