--- a/src/css/review.css
+++ b/src/css/review.css
@@ -33,7 +33,9 @@
       width: 100%;
       height: 100%;
       grid-area: 1 / 1 / span 5 / span 4;
-      background-color: #9df3c4; }
+      background: url("../images/doggo-background-texture.png");
+      background-repeat: no-repeat;
+      background-size: cover; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
