--- a/src/css/about.css
+++ b/src/css/about.css
@@ -36,12 +36,20 @@
       .about-container .family .family-text p {
         width: 30vw;
         margin-left: 5vw; }
-    .about-container .family img {
-      height: 30vw;
-      width: 30vw;
-      justify-self: center;
-      border-radius: 50%;
-      object-fit: cover; }
+    .about-container .family .image-container {
+      display: grid;
+      height: 100%;
+      width: 100%;
+      background: url("../images/doggo-background-texture-3.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: 3%; }
+      .about-container .family .image-container img {
+        place-self: center;
+        height: 30vw;
+        width: 30vw;
+        border-radius: 50%;
+        object-fit: cover; }
   .about-container .facilities .banner {
     display: grid;
     height: 50vh;
