review background texture moved to the left for framing

--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -38,6 +38,7 @@
 			background: url('../images/doggo-background-texture-2.png');
 			background-repeat: no-repeat;
 			background-size: cover;
+			background-position: 3%;
 		}
 		.review {
 			display: flex;
