--- a/src/css/review.css
+++ b/src/css/review.css
@@ -35,7 +35,8 @@
       grid-area: 1 / 1 / span 5 / span 4;
       background: url("../images/doggo-background-texture-2.png");
       background-repeat: no-repeat;
-      background-size: cover; }
+      background-size: cover;
+      background-position: 3%; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
