--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -93,8 +93,12 @@
 				text-align: center;
 				width: 60%;
 				padding: 5%;
-				background-color: $green1;
+				// background-color: $green1;
 				border-radius: 10px;
+				background: url('../images/doggo-background-texture-3.png');
+				background-repeat: no-repeat;
+				background-size: cover;
+				background-position: 3%;
 			}
 			.tile-1 {
 				box-shadow: -7px 10px 10px $green4;
