--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -88,12 +88,12 @@
 				object-fit: cover;
 			}
 			p {
+				position: relative;
 				justify-self: center;
 				align-self: center;
 				text-align: center;
 				width: 60%;
 				padding: 5%;
-				// background-color: $green1;
 				border-radius: 10px;
 				background: url('../images/doggo-background-texture-3.png');
 				background-repeat: no-repeat;
@@ -102,12 +102,18 @@
 			}
 			.tile-1 {
 				box-shadow: -7px 10px 10px $green4;
+				left: 7px;
+				bottom: 10px;
 			}
 			.tile-2 {
 				box-shadow: 7px 10px 10px $green4;
+				right: 7px;
+				bottom: 10px;
 			}
 			.tile-3 {
 				box-shadow: -7px 10px 10px $green4;
+				left: 7px;
+				bottom: 10px;
 			}
 		}
 	}
