--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,22 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 .services {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 90vh 100vh 30vh;
   flex-direction: column;
-  justify-content: center;
-  align-items: center; }
+  justify-content: center; }
   .services h1,
-  .services h2 {
+  .services h2,
+  .services th {
     font-family: "Montserrat", sans-serif;
     font-weight: 300;
     text-shadow: 2px 2px 3px #1fab89;
     opacity: 0.85; }
   .services p,
-  .services td {
+  .services td,
+  .services li {
     font-family: "Alegreya", serif;
     font-size: 20px; }
   .services .our-services {
+    grid-area: 1 / 1 / 2 / 3;
     width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -53,81 +58,96 @@
         object-fit: cover;
         object-position: 50% 30%; }
   .services .prices {
-    background: linear-gradient(#d7fbe8, white);
-    width: 100%; }
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    place-items: center;
+    grid-template-rows: 10vh 50vh 40vh;
+    width: 100%;
+    height: 100%;
+    background-color: #9df3c4; }
     .services .prices h1 {
-      font-size: 5vw;
-      text-align: center;
-      padding: 10vh; }
-    .services .prices .tables {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      justify-content: center;
-      margin-bottom: 10vh; }
-      .services .prices .tables .table {
-        display: grid;
-        justify-content: center;
-        grid-template-rows: 5vw auto; }
-        .services .prices .tables .table h2 {
-          align-self: center;
-          font-size: 3vw; }
-        .services .prices .tables .table table {
-          justify-self: center;
-          width: 80%;
-          background-color: #d7fbe8;
-          padding: 30px;
-          border-radius: 10px;
-          box-shadow: 7px 10px 10px #9df3c4;
-          border: 2px outset #9df3c4; }
-          .services .prices .tables .table table tr td {
-            border-bottom: 5px dotted #13614d;
-            border-right: none;
-            padding: 10px 0; }
-          .services .prices .tables .table table tr td:nth-child(2) {
-            text-align: center; }
+      font-size: 3.5vw;
+      text-align: center; }
+    .services .prices h2 {
+      font-size: 2vw; }
+    .services .prices .multiple-nights {
+      height: 40vh; }
+    .services .prices .one-night {
+      align-self: start;
+      position: relative;
+      top: 5vh;
+      height: 25vh; }
+    .services .prices table {
+      width: 500px;
+      padding: 0 20px 10px;
+      border-radius: 10px;
+      background: url("../images/doggo-background-texture-3.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: 3%;
+      box-shadow: -7px 10px 10px #1fab89; }
+      .services .prices table tr th {
+        font-size: 2rem;
+        font-weight: 400; }
+      .services .prices table tr td,
+      .services .prices table tr th {
+        border-bottom: 5px dotted #13614d;
+        border-right: none;
+        padding: 10px 0; }
+      .services .prices table tr td:nth-child(2) {
+        text-align: center; }
   .services .important-information {
+    grid-area: 2 / 2 / 3 / 3;
     background: linear-gradient(#d7fbe8, white);
     width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    margin-bottom: 10vh; }
+    place-items: center;
+    grid-template-rows: 10vh 50vh 40vh;
+    background: url("../images/doggo-background-texture-3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 3%; }
     .services .important-information h1 {
-      grid-column: 1 / 3;
-      font-size: 5vw;
-      text-align: center;
-      padding: 10vh; }
-    .services .important-information .information {
-      align-self: center;
-      justify-self: center;
-      width: 80%; }
-      .services .important-information .information p {
-        background-color: #d7fbe8;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 7px 10px 10px #9df3c4;
-        border: 2px outset #9df3c4; }
-    .services .important-information .opening-hours {
-      display: grid; }
-      .services .important-information .opening-hours h2 {
-        justify-self: center;
-        align-self: center;
-        font-size: 3vw;
-        margin-bottom: 5vh; }
-      .services .important-information .opening-hours table {
-        justify-self: center;
-        width: 80%;
-        background-color: #d7fbe8;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 7px 10px 10px #9df3c4;
-        border: 2px outset #9df3c4; }
-        .services .important-information .opening-hours table tr td {
-          border-bottom: 5px dotted #13614d;
-          border-right: none;
-          padding: 10px 0; }
-        .services .important-information .opening-hours table tr td:nth-child(2) {
-          text-align: center; }
+      font-size: 3.5vw;
+      text-align: center; }
+    .services .important-information ul {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      height: 40vh;
+      width: 455px;
+      padding: 0 20px;
+      border-radius: 10px;
+      box-shadow: 7px 10px 10px #1fab89;
+      background-color: #d7fbe8;
+      border: 1px solid #1fab89;
+      list-style-type: circle; }
+      .services .important-information ul li {
+        margin-left: 25px;
+        margin-right: 5px; }
+    .services .important-information table {
+      align-self: start;
+      position: relative;
+      top: 5vh;
+      height: 25vh;
+      width: 500px;
+      background-color: #d7fbe8;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 7px 10px 10px #1fab89;
+      background-color: #d7fbe8;
+      border: 1px solid #1fab89; }
+      .services .important-information table tr th {
+        font-size: 2rem;
+        font-weight: 400; }
+      .services .important-information table tr td,
+      .services .important-information table tr th {
+        border-bottom: 5px dotted #13614d;
+        border-right: none;
+        padding: 10px 0; }
+      .services .important-information table tr td:nth-child(2) {
+        text-align: center; }
   .services .links {
     width: 100%;
     height: 40vh;
