--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -1,25 +1,30 @@
 @import './variables/variables';
 
 .services {
-	display: flex;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 90vh 100vh 30vh;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
 	h1,
-	h2 {
+	h2,
+	th {
 		font-family: $title-font;
 		font-weight: 300;
 		text-shadow: 2px 2px 3px $green4;
 		opacity: 0.85;
 	}
 	p,
-	td {
+	td,
+	li {
 		font-family: $text-font;
 		font-size: 20px;
 	}
 
 	.our-services {
+		grid-area: 1 / 1 / 2 / 3;
 		width: 100%;
+		height: 100%;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		align-items: center;
@@ -62,99 +67,115 @@
 		}
 	}
 	.prices {
-		background: linear-gradient($green1, white);
+		grid-area: 2 / 1 / 3 / 2;
+		display: grid;
+		place-items: center;
+		grid-template-rows: 10vh 50vh 40vh;
 		width: 100%;
+		height: 100%;
+		background-color: $green2;
+
 		h1 {
-			font-size: 5vw;
+			font-size: 3.5vw;
 			text-align: center;
-			padding: 10vh;
 		}
-		.tables {
-			display: grid;
-			grid-template-columns: 1fr 1fr;
-			justify-content: center;
-			margin-bottom: 10vh;
-			.table {
-				display: grid;
-				justify-content: center;
-				grid-template-rows: 5vw auto;
-				h2 {
-					align-self: center;
-					font-size: 3vw;
+		h2 {
+			font-size: 2vw;
+		}
+		.multiple-nights {
+			height: 40vh;
+		}
+		.one-night {
+			align-self: start;
+			position: relative;
+			top: 5vh;
+			height: 25vh;
+		}
+		table {
+			width: 500px;
+			padding: 0 20px 10px;
+			border-radius: 10px;
+			background: url('../images/doggo-background-texture-3.png');
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: 3%;
+			box-shadow: -7px 10px 10px $green4;
+			tr {
+				th {
+					font-size: 2rem;
+					font-weight: 400;
 				}
-				table {
-					justify-self: center;
-					width: 80%;
-					background-color: $green1;
-					padding: 30px;
-					border-radius: 10px;
-					box-shadow: 7px 10px 10px $green2;
-					border: 2px outset $green2;
-					tr {
-						td {
-							border-bottom: 5px dotted $green5;
-							border-right: none;
-							padding: 10px 0;
-						}
-						td:nth-child(2) {
-							text-align: center;
-						}
-					}
+				td,
+				th {
+					border-bottom: 5px dotted $green5;
+					border-right: none;
+					padding: 10px 0;
+				}
+				td:nth-child(2) {
+					text-align: center;
 				}
 			}
 		}
 	}
 	.important-information {
+		grid-area: 2 / 2 / 3 / 3;
 		background: linear-gradient($green1, white);
 		width: 100%;
+		height: 100%;
 		display: grid;
-		grid-template-columns: 1fr 1fr;
-		justify-content: center;
-		margin-bottom: 10vh;
+		place-items: center;
+		grid-template-rows: 10vh 50vh 40vh;
+		background: url('../images/doggo-background-texture-3.png');
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: 3%;
 		h1 {
-			grid-column: 1 / 3;
-			font-size: 5vw;
+			font-size: 3.5vw;
 			text-align: center;
-			padding: 10vh;
 		}
-		.information {
-			align-self: center;
-			justify-self: center;
-			width: 80%;
-			p {
-				background-color: $green1;
-				padding: 30px;
-				border-radius: 10px;
-				box-shadow: 7px 10px 10px $green2;
-				border: 2px outset $green2;
+		ul {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+			height: 40vh;
+			width: 455px;
+			padding: 0 20px;
+			border-radius: 10px;
+			box-shadow: 7px 10px 10px $green4;
+			background-color: $green1;
+			border: 1px solid $green4;
+			list-style-type: circle;
+			li {
+				margin-left: 25px;
+				margin-right: 5px;
 			}
 		}
-		.opening-hours {
-			display: grid;
-			h2 {
-				justify-self: center;
-				align-self: center;
-				font-size: 3vw;
-				margin-bottom: 5vh;
-			}
 
-			table {
-				justify-self: center;
-				width: 80%;
-				background-color: $green1;
-				padding: 30px;
-				border-radius: 10px;
-				box-shadow: 7px 10px 10px $green2;
-				border: 2px outset $green2;
-				tr {
-					td {
-						border-bottom: 5px dotted $green5;
-						border-right: none;
-						padding: 10px 0;
-					}
-					td:nth-child(2) {
-						text-align: center;
-					}
+		table {
+			align-self: start;
+			position: relative;
+			top: 5vh;
+			height: 25vh;
+			width: 500px;
+			background-color: $green1;
+			padding: 20px;
+			border-radius: 10px;
+			box-shadow: 7px 10px 10px $green4;
+			background-color: $green1;
+			border: 1px solid $green4;
+			tr {
+				th {
+					font-size: 2rem;
+					font-weight: 400;
+				}
+				td,
+				th {
+					border-bottom: 5px dotted $green5;
+					border-right: none;
+					padding: 10px 0;
+				}
+				td:nth-child(2) {
+					text-align: center;
 				}
 			}
 		}
