border color changed on information boxes

--- a/src/css/services.css
+++ b/src/css/services.css
@@ -121,7 +121,7 @@
       border-radius: 10px;
       box-shadow: 7px 10px 10px #1fab89;
       background-color: #d7fbe8;
-      border: 1px solid #1fab89;
+      border: 1px solid #9df3c4;
       list-style-type: circle; }
       .services .important-information ul li {
         margin-left: 25px;
@@ -137,7 +137,7 @@
       border-radius: 10px;
       box-shadow: 7px 10px 10px #1fab89;
       background-color: #d7fbe8;
-      border: 1px solid #1fab89; }
+      border: 1px solid #9df3c4; }
       .services .important-information table tr th {
         font-size: 2rem;
         font-weight: 400; }
