--- a/src/css/services.css
+++ b/src/css/services.css
@@ -79,7 +79,7 @@
       height: 25vh; }
     .services .prices table {
       width: 500px;
-      padding: 0 20px 10px;
+      padding: 0 20px 20px;
       border-radius: 10px;
       background: url("../images/doggo-background-texture-3.png");
       background-repeat: no-repeat;
@@ -116,16 +116,23 @@
       flex-direction: column;
       justify-content: space-evenly;
       height: 40vh;
-      width: 455px;
-      padding: 0 20px;
+      width: 480px;
+      padding-right: 20px;
       border-radius: 10px;
       box-shadow: 7px 10px 10px #1fab89;
       background-color: #d7fbe8;
       border: 1px solid #9df3c4;
-      list-style-type: circle; }
+      list-style-type: none; }
       .services .important-information ul li {
+        display: flex;
+        align-items: center;
         margin-left: 25px;
         margin-right: 5px; }
+        .services .important-information ul li img {
+          display: inline;
+          width: 40px;
+          height: 40px;
+          padding-right: 20px; }
     .services .important-information table {
       align-self: start;
       position: relative;
