--- a/src/css/review.css
+++ b/src/css/review.css
@@ -25,32 +25,30 @@
       font-size: 3.5vw; }
   .reviews .reviews-container {
     display: grid;
-    grid-template-rows: 10vh repeat(3, 1fr) 5vh;
+    grid-template-rows: 10vh repeat(8, minmax(10vh, auto)) 5vh;
     grid-template-columns: 2fr 2fr repeat(4, 1fr) 2fr 2fr;
     justify-items: center;
     align-items: center; }
     .reviews .reviews-container .background-shader {
       width: 100%;
       height: 100%;
-      grid-area: 1 / 1 / span 5 / span 4;
-      background: url("../images/doggo-background-texture-2.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 3%; }
+      grid-area: 1 / 1 / span 10 / span 4;
+      background: url("../images/doggo-background-texture-2-crop-2.png");
+      background-repeat: repeat;
+      background-size: contain; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
       justify-content: space-around;
       align-items: flex-start;
       width: 100%;
-      height: 20vh;
+      min-height: 20vh;
       margin-bottom: 5vh;
       margin-right: 0;
-      font-size: 20px;
       background-color: #d7fbe8;
       border-radius: 10px; }
       .reviews .reviews-container .review p {
-        padding: 20px; }
+        padding: 16px; }
       .reviews .reviews-container .review p:nth-child(1)::before,
       .reviews .reviews-container .review p:nth-child(1)::after {
         content: '“ ';
@@ -63,6 +61,7 @@
       .reviews .reviews-container .review p:nth-child(1)::after {
         content: ' ”'; }
       .reviews .reviews-container .review p:nth-child(2) {
+        font-size: 20px;
         font-style: italic;
         padding-left: 50px; }
     .reviews .reviews-container .review1 {
@@ -74,3 +73,18 @@
     .reviews .reviews-container .review3 {
       grid-area: 4 / 2 / 5 / span 4;
       box-shadow: -7px 10px 10px #1fab89; }
+    .reviews .reviews-container .review4 {
+      grid-area: 5 / 4 / 6 / span 4;
+      box-shadow: 7px 10px 10px #1fab89; }
+    .reviews .reviews-container .review5 {
+      grid-area: 6 / 2 / 7 / span 4;
+      box-shadow: -7px 10px 10px #1fab89; }
+    .reviews .reviews-container .review6 {
+      grid-area: 7 / 4 / 8 / span 4;
+      box-shadow: 7px 10px 10px #1fab89; }
+    .reviews .reviews-container .review7 {
+      grid-area: 8 / 2 / 9 / span 4;
+      box-shadow: -7px 10px 10px #1fab89; }
+    .reviews .reviews-container .review8 {
+      grid-area: 9 / 4 / 10 / span 4;
+      box-shadow: 7px 10px 10px #1fab89; }
