--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -27,18 +27,17 @@
 	}
 	.reviews-container {
 		display: grid;
-		grid-template-rows: 10vh repeat(3, 1fr) 5vh;
+		grid-template-rows: 10vh repeat(8, minmax(10vh, auto)) 5vh;
 		grid-template-columns: 2fr 2fr repeat(4, 1fr) 2fr 2fr;
 		justify-items: center;
 		align-items: center;
 		.background-shader {
 			width: 100%;
 			height: 100%;
-			grid-area: 1 / 1 / span 5 / span 4;
-			background: url('../images/doggo-background-texture-2.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: 3%;
+			grid-area: 1 / 1 / span 10 / span 4;
+			background: url('../images/doggo-background-texture-2-crop-2.png');
+			background-repeat: repeat;
+			background-size: contain;
 		}
 		.review {
 			display: flex;
@@ -46,14 +45,13 @@
 			justify-content: space-around;
 			align-items: flex-start;
 			width: 100%;
-			height: 20vh;
+			min-height: 20vh;
 			margin-bottom: 5vh;
 			margin-right: 0;
-			font-size: 20px;
 			background-color: $green1;
 			border-radius: 10px;
 			p {
-				padding: 20px;
+				padding: 16px;
 			}
 			p:nth-child(1)::before,
 			p:nth-child(1)::after {
@@ -69,6 +67,7 @@
 				content: ' ”';
 			}
 			p:nth-child(2) {
+				font-size: 20px;
 				font-style: italic;
 				padding-left: 50px;
 			}
@@ -84,6 +83,26 @@
 		.review3 {
 			grid-area: 4 / 2 / 5 / span 4;
 			box-shadow: -7px 10px 10px $green4;
+		}
+		.review4 {
+			grid-area: 5 / 4 / 6 / span 4;
+			box-shadow: 7px 10px 10px $green4;
+		}
+		.review5 {
+			grid-area: 6 / 2 / 7 / span 4;
+			box-shadow: -7px 10px 10px $green4;
+		}
+		.review6 {
+			grid-area: 7 / 4 / 8 / span 4;
+			box-shadow: 7px 10px 10px $green4;
+		}
+		.review7 {
+			grid-area: 8 / 2 / 9 / span 4;
+			box-shadow: -7px 10px 10px $green4;
+		}
+		.review8 {
+			grid-area: 9 / 4 / 10 / span 4;
+			box-shadow: 7px 10px 10px $green4;
 		}
 	}
 }
