--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -63,9 +63,9 @@
       align-items: center;
       width: 100%;
       height: 100%;
-      background: url("../images/doggo-background-texture-2.png");
-      background-repeat: no-repeat;
-      background-size: 150%; }
+      background: url("../images/doggo-background-texture-2-crop-2.png");
+      background-repeat: repeat;
+      background-size: cover; }
       .landing-container .description .call-to-action a {
         font-size: 3vw;
         color: #13614d;
