--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -71,9 +71,9 @@
 			align-items: center;
 			width: 100%;
 			height: 100%;
-			background: url('../images/doggo-background-texture-2.png');
-			background-repeat: no-repeat;
-			background-size: 150%;
+			background: url('../images/doggo-background-texture-2-crop-2.png');
+			background-repeat: repeat;
+			background-size: cover;
 			a {
 				font-size: 3vw;
 				color: $green5;
