--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -56,7 +56,12 @@
         flex-grow: 1;
         padding: 3vh;
         font-size: 20px;
-        font-family: "Alegreya", serif; }
+        font-family: "Alegreya", serif;
+        background: url("../images/doggo-background-texture-3.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 3%;
+        box-shadow: -7px 10px 10px #1fab89; }
     .landing-container .description .call-to-action {
       display: flex;
       justify-content: center;
@@ -67,12 +72,14 @@
       background-repeat: repeat;
       background-size: cover; }
       .landing-container .description .call-to-action a {
+        color: black;
+        font-weight: 300;
+        padding-bottom: 20px;
         font-size: 3vw;
-        color: #13614d;
-        text-shadow: 0 0 5px #9df3c4;
+        text-shadow: 2px 2px 3px #1fab89;
         text-decoration: none;
         font-family: "Montserrat", sans-serif;
         padding: 20px;
         border-radius: 10px;
-        border: 2px solid #e3f39b;
+        box-shadow: 7px 10px 10px #bf9b30;
         background: radial-gradient(#e3f39b, #ffbf00); }
