--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -63,6 +63,11 @@
 				padding: 3vh;
 				font-size: 20px;
 				font-family: $text-font;
+				background: url('../images/doggo-background-texture-3.png');
+				background-repeat: no-repeat;
+				background-size: cover;
+				background-position: 3%;
+				box-shadow: -7px 10px 10px $green4;
 			}
 		}
 		.call-to-action {
@@ -75,14 +80,16 @@
 			background-repeat: repeat;
 			background-size: cover;
 			a {
+				color: black;
+				font-weight: 300;
+				padding-bottom: 20px;
 				font-size: 3vw;
-				color: $green5;
-				text-shadow: 0 0 5px $green2;
+				text-shadow: 2px 2px 3px $green4;
 				text-decoration: none;
 				font-family: $title-font;
 				padding: 20px;
 				border-radius: 10px;
-				border: 2px solid $gold2;
+				box-shadow: 7px 10px 10px $gold4;
 				background: radial-gradient($gold2, $gold3);
 			}
 		}
