--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -78,6 +78,9 @@
 					padding-bottom: 20px;
 				}
 				padding-bottom: 20px;
+				a {
+					text-decoration: none;
+				}
 			}
 		}
 		.phone-numbers {
