--- a/src/css/about.css
+++ b/src/css/about.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 .about-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  margin-top: 10vh; }
   .about-container p {
     font-size: 20px;
     font-family: "Alegreya", serif; }
