--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,151 +1,149 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
-.contact h1,
-.contact h2,
-.contact th {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-  color: white;
-  opacity: 0.85;
-  text-shadow: 2px 2px 3px #1fab89; }
-
-.contact h1 {
-  font-size: 5vw; }
-
-.contact p,
-.contact td {
-  font-size: 20px;
-  font-family: "Alegreya", serif; }
-
-.contact .contact-info {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 35vh 40vh 50vh 40vh;
-  place-items: center;
-  background-color: #ecfaf3; }
-  .contact .contact-info p {
-    width: 500px;
-    padding: 16px;
-    background-color: #d7fbe8;
-    border-radius: 10px; }
-  .contact .contact-info .banner {
-    height: 100%;
-    width: 100%;
-    grid-area: 1 / 1 / 2 / 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder-3.jpg);
-    background-position: 50% 50%;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover; }
-    .contact .contact-info .banner h1 {
-      margin-bottom: 5vh; }
-    .contact .contact-info .banner h2 {
-      font-size: 2.5vw;
-      font-style: italic; }
-  .contact .contact-info .opening-paragraph {
-    grid-area: 2 / 1 / 3 / 2;
-    box-shadow: -7px 10px 10px #1fab89;
-    background: url("../images/doggo-background-texture-3.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 3%; }
-  .contact .contact-info .phone-numbers,
-  .contact .contact-info .address {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
-    .contact .contact-info .phone-numbers p,
-    .contact .contact-info .address p {
-      box-shadow: 7px 10px 10px #1fab89;
-      text-align: center;
-      padding-bottom: 20px; }
-      .contact .contact-info .phone-numbers p h2,
-      .contact .contact-info .address p h2 {
-        color: black;
-        font-weight: 400;
-        padding-bottom: 20px; }
-      .contact .contact-info .phone-numbers p a,
-      .contact .contact-info .address p a {
-        text-decoration: none; }
-  .contact .contact-info .phone-numbers p {
-    box-shadow: 7px 10px 10px #bf9b30; }
-  .contact .contact-info .phone-numbers {
-    background: url("../images/doggo-background-texture-2-crop-2.png");
-    background-repeat: repeat;
-    background-size: cover; }
-    .contact .contact-info .phone-numbers p {
-      font-size: 1.5rem;
-      background: radial-gradient(#e3f39b, #ffbf00); }
-      .contact .contact-info .phone-numbers p h2 {
-        font-size: 2.5rem; }
-      .contact .contact-info .phone-numbers p span {
-        font-size: 2rem;
-        padding-left: 1rem; }
-  .contact .contact-info iframe {
-    width: 100%;
-    height: 100%;
-    grid-area: 3 / 1 / 3 / 3; }
-  .contact .contact-info .table-background {
-    grid-area: 4 / 1 / 5 / 2;
-    height: 100%;
-    width: 100%;
-    background: url("../images/doggo-background-texture-2-crop-2.png");
-    background-repeat: repeat;
-    background-size: cover; }
-  .contact .contact-info table {
-    grid-area: 4 / 1 / 5 / 2;
-    width: 500px;
-    background-color: #d7fbe8;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 7px 10px 10px #1fab89;
-    background-color: #d7fbe8;
-    border: 1px solid #9df3c4; }
-    .contact .contact-info table tr th {
-      font-size: 2rem;
-      font-weight: 400;
-      color: black; }
-    .contact .contact-info table tr td,
-    .contact .contact-info table tr th {
-      border-bottom: 5px dotted #13614d;
-      border-right: none;
-      padding: 10px 0; }
-    .contact .contact-info table tr td:nth-child(2) {
-      text-align: center; }
-  .contact .contact-info .address {
-    grid-area: 4 / 2 / 5 / 3; }
-    .contact .contact-info .address p {
+.contact {
+  margin-top: 10vh; }
+  .contact h1,
+  .contact h2,
+  .contact th {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+    color: white;
+    opacity: 0.85;
+    text-shadow: 2px 2px 3px #1fab89; }
+  .contact h1 {
+    font-size: 5vw; }
+  .contact p,
+  .contact td {
+    font-size: 20px;
+    font-family: "Alegreya", serif; }
+  .contact .contact-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 35vh 40vh 50vh 40vh;
+    place-items: center;
+    background-color: #ecfaf3; }
+    .contact .contact-info p {
+      width: 500px;
+      padding: 16px;
+      background-color: #d7fbe8;
+      border-radius: 10px; }
+    .contact .contact-info .banner {
+      height: 100%;
+      width: 100%;
+      grid-area: 1 / 1 / 2 / 3;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder-3.jpg);
+      background-position: 50% 50%;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: cover; }
+      .contact .contact-info .banner h1 {
+        margin-bottom: 5vh; }
+      .contact .contact-info .banner h2 {
+        font-size: 2.5vw;
+        font-style: italic; }
+    .contact .contact-info .opening-paragraph {
+      grid-area: 2 / 1 / 3 / 2;
+      box-shadow: -7px 10px 10px #1fab89;
       background: url("../images/doggo-background-texture-3.png");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 3%; }
-
-.contact .review-us {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: center;
-  align-items: center;
-  background-color: #9df3c4;
-  padding-bottom: 10vh; }
-  .contact .review-us .banner {
-    height: 40vh;
-    width: 100%;
-    grid-column: 1 / 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    .contact .contact-info .phone-numbers,
+    .contact .contact-info .address {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      .contact .contact-info .phone-numbers p,
+      .contact .contact-info .address p {
+        box-shadow: 7px 10px 10px #1fab89;
+        text-align: center;
+        padding-bottom: 20px; }
+        .contact .contact-info .phone-numbers p h2,
+        .contact .contact-info .address p h2 {
+          color: black;
+          font-weight: 400;
+          padding-bottom: 20px; }
+        .contact .contact-info .phone-numbers p a,
+        .contact .contact-info .address p a {
+          text-decoration: none; }
+    .contact .contact-info .phone-numbers p {
+      box-shadow: 7px 10px 10px #bf9b30; }
+    .contact .contact-info .phone-numbers {
+      background: url("../images/doggo-background-texture-2-crop-2.png");
+      background-repeat: repeat;
+      background-size: cover; }
+      .contact .contact-info .phone-numbers p {
+        font-size: 1.5rem;
+        background: radial-gradient(#e3f39b, #ffbf00); }
+        .contact .contact-info .phone-numbers p h2 {
+          font-size: 2.5rem; }
+        .contact .contact-info .phone-numbers p span {
+          font-size: 2rem;
+          padding-left: 1rem; }
+    .contact .contact-info iframe {
+      width: 100%;
+      height: 100%;
+      grid-area: 3 / 1 / 3 / 3; }
+    .contact .contact-info .table-background {
+      grid-area: 4 / 1 / 5 / 2;
+      height: 100%;
+      width: 100%;
+      background: url("../images/doggo-background-texture-2-crop-2.png");
+      background-repeat: repeat;
+      background-size: cover; }
+    .contact .contact-info table {
+      grid-area: 4 / 1 / 5 / 2;
+      width: 500px;
+      background-color: #d7fbe8;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 7px 10px 10px #1fab89;
+      background-color: #d7fbe8;
+      border: 1px solid #9df3c4; }
+      .contact .contact-info table tr th {
+        font-size: 2rem;
+        font-weight: 400;
+        color: black; }
+      .contact .contact-info table tr td,
+      .contact .contact-info table tr th {
+        border-bottom: 5px dotted #13614d;
+        border-right: none;
+        padding: 10px 0; }
+      .contact .contact-info table tr td:nth-child(2) {
+        text-align: center; }
+    .contact .contact-info .address {
+      grid-area: 4 / 2 / 5 / 3; }
+      .contact .contact-info .address p {
+        background: url("../images/doggo-background-texture-3.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 3%; }
+  .contact .review-us {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
     align-items: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder-4.jpg);
-    background-position: 50% 80%;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover; }
-  .contact .review-us p {
-    margin-top: 10vh; }
+    background-color: #9df3c4;
+    padding-bottom: 10vh; }
+    .contact .review-us .banner {
+      height: 40vh;
+      width: 100%;
+      grid-column: 1 / 3;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder-4.jpg);
+      background-position: 50% 80%;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: cover; }
+    .contact .review-us p {
+      margin-top: 10vh; }
