--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin-top: 10vh; }
   .landing-container .title-banner {
     width: 100%;
     height: 50vh;
