--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 nav {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
