--- a/src/css/services.css
+++ b/src/css/services.css
@@ -5,7 +5,8 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 90vh 100vh 30vh;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 10vh; }
   .services h1,
   .services h2,
   .services th {
