--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -3,6 +3,7 @@
 .about-container {
 	display: flex;
 	flex-direction: column;
+	margin-top: 10vh;
 	p {
 		font-size: 20px;
 		font-family: $text-font;
