--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-top: 10vh;
 	.title-banner {
 		width: 100%;
 		height: 50vh;
