--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -50,7 +50,7 @@
 		grid-template-columns: 1fr 1fr;
 		justify-items: center;
 		align-items: center;
-		height: 40vh;
+		min-height: 40vh;
 		width: 100%;
 		.text-container {
 			display: flex;
