--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -3,7 +3,7 @@
 .services {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 90vh 100vh 30vh;
+	grid-template-rows: 90vh 100vh;
 	margin-top: 10vh;
 	h1,
 	h2,
@@ -202,29 +202,6 @@
 				td:nth-child(2) {
 					text-align: center;
 				}
-			}
-		}
-	}
-	.links {
-		width: 100%;
-		height: 40vh;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		a {
-			text-decoration: none;
-			text-align: center;
-			justify-self: center;
-			align-self: center;
-			background-color: $green1;
-			border: 2px outset $green2;
-			box-shadow: 7px 10px 10px $green1;
-			padding: 20px 10px;
-			border-radius: 10px;
-			p {
-				width: 20vw;
-				font-family: $title-font;
-				font-size: 2.7vw;
-				color: black;
 			}
 		}
 	}
