--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -1,38 +1,49 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
-.landing-container {
-  background-color: #ecfaf3;
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
+.landing-container .title-banner, .landing-container .title-banner .titles {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; }
+
+.landing-container .title-banner .titles h1,
+.landing-container .title-banner .titles h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  color: white;
+  opacity: 0.85;
+  text-shadow: 2px 2px 3px #1fab89; }
+
+.landing-container .description .text-container p {
+  box-shadow: -7px 10px 10px #1fab89;
+  border-radius: 10px; }
+
+.landing-container .description .text-container p {
+  background: url("../images/doggo-background-texture-3.png");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.landing-container .description .call-to-action {
+  background: url("../images/doggo-background-texture-2-crop-2.png");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.landing-container {
+  background-color: #ecfaf3;
   margin-top: 10vh; }
   .landing-container .title-banner {
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/banner-placeholder.jpg);
-    background-position: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/banner-placeholder.jpg");
+    background-position: 50% 50%;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover; }
+    background-size: cover;
+    width: 100%;
+    height: 50vh; }
     .landing-container .title-banner .titles {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       padding: 30px 50px;
       border-radius: 10px; }
-      .landing-container .title-banner .titles h1,
-      .landing-container .title-banner .titles h2 {
-        font-family: "Montserrat", sans-serif;
-        font-weight: 300;
-        color: white;
-        opacity: 0.85;
-        text-shadow: 2px 2px 3px #1fab89; }
       .landing-container .title-banner .titles h1 {
         font-size: 5vw;
         margin-bottom: 5vh; }
@@ -42,36 +53,25 @@
   .landing-container .description {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    justify-items: center;
-    align-items: center;
+    place-items: center;
     min-height: 40vh;
     width: 100%; }
     .landing-container .description .text-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      display: grid;
+      place-items: center;
       margin: 10%;
       background-color: #d7fbe8;
       border-radius: 10px; }
       .landing-container .description .text-container p {
         flex-grow: 1;
-        padding: 3vh;
-        font-size: 20px;
         font-family: "Alegreya", serif;
-        background: url("../images/doggo-background-texture-3.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 3%;
-        box-shadow: -7px 10px 10px #1fab89; }
+        font-size: 20px;
+        padding: 3vh; }
     .landing-container .description .call-to-action {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      display: grid;
+      place-items: center;
       width: 100%;
-      height: 100%;
-      background: url("../images/doggo-background-texture-2-crop-2.png");
-      background-repeat: repeat;
-      background-size: cover; }
+      height: 100%; }
       .landing-container .description .call-to-action a {
         color: black;
         font-weight: 300;
