--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,4 +1,5 @@
 @import 'variables/variables';
+@import './variables/mixins';
 
 .about-container {
 	display: flex;
@@ -9,17 +10,12 @@
 		font-family: $text-font;
 	}
 	h1 {
-		font-family: $title-font;
-		font-size: 3vw;
-		font-weight: 300;
-		color: black;
-		opacity: 0.85;
+		@include title-styles(black);
 	}
 	.family {
-		width: 100%;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		align-items: center;
+		width: 100%;
 		height: 90vh;
 		background-color: $green1;
 		.family-text {
@@ -34,8 +30,6 @@
 				margin-bottom: 7vh;
 				font-size: 5vw;
 				margin-left: 5vw;
-				border-radius: 10px;
-				text-shadow: 2px 2px 3px $green4;
 			}
 			p {
 				width: 30vw;
@@ -43,45 +37,32 @@
 			}
 		}
 		.image-container {
+			@extend %light-wallpaper;
 			display: grid;
+			place-items: center;
 			height: 100%;
 			width: 100%;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
 			background-position: 3%;
 			img {
-				place-self: center;
-				height: 30vw;
-				width: 30vw;
-				border-radius: 50%;
-				object-fit: cover;
+				@include circular-image(30vw);
 			}
 		}
 	}
 	.facilities {
 		.banner {
+			@include parallax-banner('../images/about-banner-placeholder.jpg');
 			display: grid;
+			place-items: center;
 			height: 50vh;
-			background: url('../images/about-banner-placeholder.jpg');
-			background-position: center;
-			background-attachment: fixed;
-			background-repeat: no-repeat;
-			background-size: cover;
 			h1 {
-				justify-self: center;
-				align-self: center;
-				font-family: $title-font;
+				@include title-styles(white);
 				font-size: 5vw;
-				font-weight: 300;
-				color: white;
-				opacity: 0.85;
-				text-shadow: 2px 2px 3px $green4;
 			}
 		}
 		.tiles {
 			display: grid;
 			grid-template-columns: 1fr 1fr;
+			place-items: center;
 			background-color: $green2;
 			img {
 				width: 100%;
@@ -89,31 +70,21 @@
 				object-fit: cover;
 			}
 			p {
+				@extend %light-wallpaper;
 				position: relative;
-				justify-self: center;
-				align-self: center;
 				text-align: center;
 				width: 60%;
 				padding: 5%;
-				border-radius: 10px;
-				background: url('../images/doggo-background-texture-3.png');
-				background-repeat: no-repeat;
-				background-size: cover;
-				background-position: 3%;
 			}
-			.tile-1 {
-				box-shadow: -7px 10px 10px $green4;
+			.tile-1,
+			.tile-3 {
+				@extend %left-card;
 				left: 7px;
 				bottom: 10px;
 			}
 			.tile-2 {
-				box-shadow: 7px 10px 10px $green4;
+				@extend %right-card;
 				right: 7px;
-				bottom: 10px;
-			}
-			.tile-3 {
-				box-shadow: -7px 10px 10px $green4;
-				left: 7px;
 				bottom: 10px;
 			}
 		}
