--- a/src/scss/variables/_mixins.scss
+++ b/src/scss/variables/_mixins.scss
@@ -17,6 +17,14 @@
 	text-shadow: 2px 2px 3px $green4;
 }
 
+@mixin circular-image($size, $x: 50%, $y: 50%) {
+	height: $size;
+	width: $size;
+	border-radius: 50%;
+	object-fit: cover;
+	object-position: $x $y;
+}
+
 %centered-column-flexbox {
 	display: flex;
 	flex-direction: column;
